--- a/App/AppInfo/appinfo.ini
+++ b/App/AppInfo/appinfo.ini
@@ -6,7 +6,7 @@ Version=3.0
 Name=Mumble Portable
 AppID=MumblePortable
 Publisher=The Mumble team & PortableApps.com
-Homepage=PortableApps.com/MumblePortable
+Homepage=PortableApps.com/node/42611
 Category=Internet
 Description=VoIP client
 Language=Multilingual
@@ -18,8 +18,8 @@ Freeware=true
 CommercialUse=true
 
 [Version]
-PackageVersion=1.2.10.0
-DisplayVersion=1.2.11 Dev Test 1
+PackageVersion=1.2.11.0
+DisplayVersion=1.2.13 Dev Test 1
 
 [Control]
 Icons=1
