fix won't launch issue #3 (DT2)

--- a/App/AppInfo/Launcher/MumblePortable.ini
+++ b/App/AppInfo/Launcher/MumblePortable.ini
@@ -2,6 +2,9 @@
 ProgramExecutable=Mumble\mumble.exe
 RunAsAdmin=try
 
+[Environment]
+__COMPAT_LAYER=RunAsInvoker
+
 [FilesMove]
 mumble.ini=%PAL:AppDir%\Mumble\
 mumble.sqlite=%PAL:AppDir%\Mumble\
