update Mumble to 1.2.15

--- a/App/Mumble/murmur.ini
+++ b/App/Mumble/murmur.ini
@@ -145,7 +145,7 @@ users=100
 #
 #registerName=Mumble Server
 #registerPassword=secret
-#registerUrl=http://mumble.sourceforge.net/
+#registerUrl=https://www.mumble.info/
 #registerHostname=
 
 # If this option is enabled, the server will announce its presence via the 
