--- a/App/AppInfo/Launcher/MumblePortable.ini
+++ b/App/AppInfo/Launcher/MumblePortable.ini
@@ -1,5 +1,8 @@
 [Launch]
 ProgramExecutable=Mumble\mumble.exe
+WaitForEXE1=mumble-g15-helper.exe
+DirectoryMoveOK=yes
+SupportsUNC=yes
 RunAsAdmin=try
 
 [Environment]
