--- a/App/AppInfo/appinfo.ini
+++ b/App/AppInfo/appinfo.ini
@@ -6,7 +6,7 @@ Version=3.4
 Name=Mumble Portable
 AppID=MumblePortable
 Publisher=The Mumble team & PortableApps.com
-Homepage=PortableApps.com/node/42611
+Homepage=PortableApps.com/apps/internet/mumble-portable
 Category=Internet
 Description=VoIP client
 Language=Multilingual
@@ -18,8 +18,8 @@ Freeware=true
 CommercialUse=true
 
 [Version]
-PackageVersion=1.2.16.1
-DisplayVersion=1.2.17 Dev Test 1
+PackageVersion=1.2.17.0
+DisplayVersion=1.2.17
 
 [Control]
 Icons=1
