fix typo in installer (Rev2)

--- a/App/AppInfo/appinfo.ini
+++ b/App/AppInfo/appinfo.ini
@@ -18,8 +18,8 @@ Freeware=true
 CommercialUse=true
 
 [Version]
-PackageVersion=1.2.19.0
-DisplayVersion=1.2.19
+PackageVersion=1.2.19.2
+DisplayVersion=1.2.19 Rev 2
 
 [Control]
 Icons=1
