update Mumble to 1.3.0

--- a/App/AppInfo/Launcher/MumblePortable.ini
+++ b/App/AppInfo/Launcher/MumblePortable.ini
@@ -8,6 +8,12 @@ RunAsAdmin=try
 [Environment]
 __COMPAT_LAYER=RunAsInvoker
 
+[DirectoriesMove]
+Overlay=%PAL:AppDir%\Mumble\Overlay
+Plugins=%PAL:AppDir%\Mumble\Plugins
+Snapshots=%PAL:AppDir%\Mumble\Snapshots
+Themes=%PAL:AppDir%\Mumble\Themes
+
 [FilesMove]
 mumble.ini=%PAL:AppDir%\Mumble\
 mumble.sqlite=%PAL:AppDir%\Mumble\
