--- a/App/AppInfo/installer.ini
+++ b/App/AppInfo/installer.ini
@@ -1,3 +1,9 @@
+[DirectoriesToPreserve]
+PreserveDirectory1=App\Mumble\Overlay
+PreserveDirectory2=App\Mumble\Plugins
+PreserveDirectory3=App\Mumble\Snapshots
+PreserveDirectory4=App\Mumble\Themes
+
 [FilesToPreserve]
 PreserveFile1=App\mumble\mumble.ini
 PreserveFile2=App\mumble\mumble.sqlite
