--- a/App/AppInfo/appinfo.ini
+++ b/App/AppInfo/appinfo.ini
@@ -1,6 +1,6 @@
 [Format]
 Type=PortableApps.comFormat
-Version=3.4
+Version=3.5
 
 [Details]
 Name=Mumble Portable
@@ -18,9 +18,10 @@ Freeware=true
 CommercialUse=true
 
 [Version]
-PackageVersion=1.2.19.2
-DisplayVersion=1.2.19 Rev 2
+PackageVersion=1.3.0.0
+DisplayVersion=1.3.0
 
 [Control]
 Icons=1
 Start=MumblePortable.exe
+BaseAppID=net.sourceforge.mumble.Mumble
