--- a/App/AppInfo/appinfo.ini
+++ b/App/AppInfo/appinfo.ini
@@ -6,7 +6,7 @@ Version=3.5
 Name=Mumble Portable
 AppID=MumblePortable
 Publisher=The Mumble team & PortableApps.com
-Homepage=PortableApps.com/apps/internet/mumble-portable
+Homepage=https://portableapps.com/apps/internet/mumble-portable
 Category=Internet
 Description=VoIP client
 Language=Multilingual
@@ -18,8 +18,8 @@ Freeware=true
 CommercialUse=true
 
 [Version]
-PackageVersion=1.3.0.0
-DisplayVersion=1.3.0
+PackageVersion=1.3.1.0
+DisplayVersion=1.3.1
 
 [Control]
 Icons=1
